# AnilistStream

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
internal/: routes.py  util.py
internal/anilist/: __init__.py  api.py  mapping.py  sync.py
internal/provider/: __init__.py  model.py  provider.py
internal/stremio/: __init__.py  catalog.py  manifest.py  meta.py  stream.py
public/: animeverse_catalog.json  manifest.json
templates/: configure.html  index.html
